--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -169,6 +169,7 @@
     "    x = torch.randn((4, 3, 256, 256)).to(device)\n",
     "    model = UNET(in_channels = 3, out_channels = 3).to(device)\n",
     "    preds = model(x)\n",
+    "\n",
     "    print(preds.shape)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -412,45 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fd8a9313-0293-4b00-8cf1-1255160315d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "model = UNET(in_channels = 3, out_channels = 3).to(device)\n",
-    "epochs = 100\n",
-    "lr = 1e-4\n",
-    "criterion = torch.nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr = lr)\n",
-    "\n",
-    "history = train_and_evaluate(model, train_loader, test_loader, criterion, \n",
-    "                             optimizer, epochs, device, train_log, val_log, batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "b1633480-1960-473f-86f0-6dbd653172cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello LOL\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello LOL\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "64611d7a-cbe4-440a-a444-022965555635",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +435,7 @@
       "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(16, 3136, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -500,7 +464,7 @@
       "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(32, 6272, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -529,7 +493,7 @@
       "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(64, 12544, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -558,7 +522,7 @@
       "            (conv2d): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(128, 25088, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(128, 1568, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -590,7 +554,7 @@
       "            (conv2d): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(128, 25088, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(128, 1568, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -619,7 +583,7 @@
       "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(64, 12544, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -648,7 +612,7 @@
       "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(32, 6272, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -677,7 +641,7 @@
       "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(16, 3136, kernel_size=(1, 1), stride=(1, 1))\n",
+      "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
       "        )\n",
       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -707,7 +671,7 @@
       "          (conv2d): Conv2d(1024, 256, kernel_size=(1, 1), stride=(1, 1))\n",
       "        )\n",
       "        (conv2): ConvModule(\n",
-      "          (conv2d): Conv2d(256, 50176, kernel_size=(1, 1), stride=(1, 1))\n",
+      "          (conv2d): Conv2d(256, 3136, kernel_size=(1, 1), stride=(1, 1))\n",
       "        )\n",
       "      )\n",
       "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -728,7 +692,57 @@
     }
    ],
    "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "model = UNET(in_channels = 3, out_channels = 3).to(device)\n",
+    "epochs = 100\n",
+    "lr = 1e-4\n",
+    "criterion = torch.nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr = lr)\n",
+    "\n",
+    "# history = train_and_evaluate(model, train_loader, test_loader, criterion, \n",
+    "#                              optimizer, epochs, device, train_log, val_log, batch_size)\n",
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dd0c32a1-b5bc-412c-b53c-cd9019b02b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eda2b10bbb2e43a698ce48e93c06aad5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training Epoch 1/100:   0%|          | 0/744 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _releaseLock at 0x7ffaaa46a4d0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/logging/__init__.py\", line 228, in _releaseLock\n",
+      "    def _releaseLock():\n",
+      "KeyboardInterrupt: \n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = train_and_evaluate(model, train_loader, test_loader, criterion, \n",
+    "                             optimizer, epochs, device, train_log, val_log, batch_size)"
    ]
   },
   {
@@ -741,63 +755,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "63919b57-cd34-4f74-9d48-1106d420fbfb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_case(test_dataset, model, model_path = 'weights/model_20240516_075609.pth'):\n",
+    "# def test_case(test_dataset, model, model_path = 'weights/model_20240516_075609.pth'):\n",
     "\n",
-    "    haze_image, clean_image = test_dataset\n",
-    "    haze_image, clean_image = haze_image.to(device), clean_image.to(device)\n",
+    "#     haze_image, clean_image = test_dataset\n",
+    "#     haze_image, clean_image = haze_image.to(device), clean_image.to(device)\n",
     "    \n",
-    "    model = model.to(device)\n",
-    "    model.load_state_dict(torch.load(model_path))\n",
+    "#     model = model.to(device)\n",
+    "#     model.load_state_dict(torch.load(model_path))\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        denoised_image = model(haze_image.unsqueeze(0).cuda())\n",
-    "        print(f\"PSNR:{psnr(denoised_image, clean_image.to(device))}\")\n",
+    "#     with torch.no_grad():\n",
+    "#         denoised_image = model(haze_image.unsqueeze(0).cuda())\n",
+    "#         print(f\"PSNR:{psnr(denoised_image, clean_image.to(device))}\")\n",
     "    \n",
     "    \n",
-    "    # Convert PyTorch tensors to numpy arrays\n",
-    "    haze_np = haze_image.permute(1, 2, 0).cpu().numpy()  # Assuming haze_image is a PyTorch tensor\n",
-    "    denoised_np = denoised_image.squeeze().permute(1, 2, 0).cpu().numpy()  # Assuming denoised_image is a PyTorch tensor\n",
-    "    clean_np = clean_image.squeeze().permute(1, 2, 0).cpu().numpy()  # Assuming clean_image is a PyTorch tensor\n",
+    "#     # Convert PyTorch tensors to numpy arrays\n",
+    "#     haze_np = haze_image.permute(1, 2, 0).cpu().numpy()  # Assuming haze_image is a PyTorch tensor\n",
+    "#     denoised_np = denoised_image.squeeze().permute(1, 2, 0).cpu().numpy()  # Assuming denoised_image is a PyTorch tensor\n",
+    "#     clean_np = clean_image.squeeze().permute(1, 2, 0).cpu().numpy()  # Assuming clean_image is a PyTorch tensor\n",
     "    \n",
-    "    # Calculate SSIM\n",
-    "    ssim_value = ssim(denoised_np, clean_np, \n",
-    "                      multichannel = True, channel_axis = -1, data_range = 1)\n",
-    "     # Assuming images are in RGB format\n",
-    "    print(f\"SSIM: {ssim_value}\")\n",
+    "#     # Calculate SSIM\n",
+    "#     ssim_value = ssim(denoised_np, clean_np, \n",
+    "#                       multichannel = True, channel_axis = -1, data_range = 1)\n",
+    "#      # Assuming images are in RGB format\n",
+    "#     print(f\"SSIM: {ssim_value}\")\n",
     "    \n",
-    "    # Plot the haze image, denoised image, and clean image\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(10, 5))\n",
+    "#     # Plot the haze image, denoised image, and clean image\n",
+    "#     fig, axes = plt.subplots(1, 3, figsize=(10, 5))\n",
     "    \n",
-    "    axes[0].imshow(haze_np)\n",
-    "    axes[0].set_title('Haze Image')\n",
-    "    axes[0].axis('off')\n",
+    "#     axes[0].imshow(haze_np)\n",
+    "#     axes[0].set_title('Haze Image')\n",
+    "#     axes[0].axis('off')\n",
     "    \n",
-    "    axes[1].imshow(denoised_np)\n",
-    "    axes[1].set_title('Denoised Image')\n",
-    "    axes[1].axis('off')\n",
+    "#     axes[1].imshow(denoised_np)\n",
+    "#     axes[1].set_title('Denoised Image')\n",
+    "#     axes[1].axis('off')\n",
     "    \n",
-    "    axes[2].imshow(clean_np)\n",
-    "    axes[2].set_title('Clean Image')\n",
-    "    axes[2].axis('off')\n",
+    "#     axes[2].imshow(clean_np)\n",
+    "#     axes[2].set_title('Clean Image')\n",
+    "#     axes[2].axis('off')\n",
     "    \n",
-    "    plt.show()\n"
+    "#     plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "8ad3a58d-3a24-45ab-810a-991c26fc6adf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inference_lol(test_dataset, model, model_path = 'weights/model_20240516_075609.pth'):\n",
+    "def inference_lol(test_dataset, model, model_path = 'weights/model_20240517_032535.pth'):\n",
     "\n",
-    "    for i in range(len(test_dataset)):\n",
+    "    for i in range(20):\n",
     "        haze_image, clean_image = test_dataset[i]\n",
     "        haze_image, clean_image = haze_image.to(device), clean_image.to(device)\n",
     "        \n",
