--- a/models_long.ipynb
+++ b/models_long.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "torch.Size([1, 3, 256, 256])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,249 +68,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UNET_Long(\n",
-      "  (downs): ModuleList(\n",
-      "    (0): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(8, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(32, 8, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(8, 98, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(32, 32, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(32, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (1): Conv2d(32, 64, kernel_size=(1, 1), stride=(2, 2), padding=(1, 1))\n",
-      "    (2): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (3): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), padding=(1, 1))\n",
-      "    (4): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (5): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), padding=(1, 1))\n",
-      "    (6): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "  )\n",
-      "  (ups): ModuleList(\n",
-      "    (0): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-      "    (1): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(128, 1568, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (2): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
-      "    (3): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(256, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(256, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (4): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
-      "    (5): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(128, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(128, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "    (6): ConvTranspose2d(64, 32, kernel_size=(2, 2), stride=(2, 2))\n",
-      "    (7): BottleNeck_Long(\n",
-      "      (invblock): Sequential(\n",
-      "        (0): Involution_CUDA(\n",
-      "          (conv1): ConvModule(\n",
-      "            (batch_norm): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "          (conv2): ConvModule(\n",
-      "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
-      "          )\n",
-      "        )\n",
-      "        (1): RMSNorm()\n",
-      "        (2): GELU(approximate='none')\n",
-      "      )\n",
-      "      (conv_block): Sequential(\n",
-      "        (0): Conv2d(64, 32, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (mapping): Sequential(\n",
-      "        (0): Conv2d(64, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): RMSNorm()\n",
-      "      )\n",
-      "      (gelu): GELU(approximate='none')\n",
-      "    )\n",
-      "  )\n",
-      "  (warmup_conv): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (final_layer): Conv2d(32, 3, kernel_size=(1, 1), stride=(1, 1))\n",
-      "  (bottle_neck): BottleNeck_Long(\n",
-      "    (invblock): Sequential(\n",
-      "      (0): Involution_CUDA(\n",
-      "        (conv1): ConvModule(\n",
-      "          (batch_norm): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        )\n",
-      "        (conv2): ConvModule(\n",
-      "          (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        )\n",
-      "      )\n",
-      "      (1): RMSNorm()\n",
-      "      (2): GELU(approximate='none')\n",
-      "    )\n",
-      "    (conv_block): Sequential(\n",
-      "      (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "      (1): RMSNorm()\n",
-      "    )\n",
-      "    (mapping): Sequential(\n",
-      "      (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (1): RMSNorm()\n",
-      "    )\n",
-      "    (gelu): GELU(approximate='none')\n",
-      "  )\n",
-      ")\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 4])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(unet_long)"
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "x = torch.randn(2, 3, 4)\n",
+    "normalized_x = F.normalize(x, dim=1)\n",
+    "normalized_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norms = x.norm(2, dim=-1)\n",
+    "norms.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LayerNorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 1, 1, 4])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[1, 2, 3, 4],\n",
+    "                  [4, 5, 6, 7]], dtype = torch.float32)\n",
+    "\n",
+    "a[:, None, None].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNorm(nn.Module):\n",
+    "    \"\"\" LayerNorm that supports two data formats: channels_last (default) or channels_first. \n",
+    "    The ordering of the dimensions in the inputs. channels_last corresponds to inputs with \n",
+    "    shape (batch_size, height, width, channels) while channels_first corresponds to inputs \n",
+    "    with shape (batch_size, channels, height, width).\n",
+    "    \"\"\"\n",
+    "    def __init__(self, normalized_shape, eps = 1e-6, data_format = \"channels_last\"):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.weight = nn.Parameter(torch.ones(normalized_shape))\n",
+    "        self.bias = nn.Parameter(torch.zeros(normalized_shape))\n",
+    "        self.eps = eps\n",
+    "        self.data_format = data_format\n",
+    "\n",
+    "        if self.data_format not in [\"channels_last\", \"channels_first\"]:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "        self.normalized_shape = (normalized_shape, )\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        if self.data_format == \"channels_last\":\n",
+    "            return F.layer_norm(x, self.normalized_shape, self.weight, \n",
+    "                                self.bias, self.eps)\n",
+    "        elif self.data_format == \"channels_first\":\n",
+    "            u = x.mean(1, keepdim = True)\n",
+    "            s = (x - u).pow(2).mean(1, keepdim = True)\n",
+    "            x = (x - u) / torch.sqrt(s + self.eps)\n",
+    "\n",
+    "            x = self.weight[:, None, None] * x + self.bias[:, None, None]\n",
+    "\n",
+    "            return x"
    ]
   },
   {
@@ -318,7 +188,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = torch.randn(1, 3, 4, 4)\n",
+    "\n",
+    "layernorm = layernorm"
+   ]
   }
  ],
  "metadata": {
