--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -415,7 +415,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "fd8a9313-0293-4b00-8cf1-1255160315d1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
