--- a/involution_naive.ipynb
+++ b/involution_naive.ipynb
@@ -156,7 +156,7 @@
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -164,29 +164,28 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(3, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
-      "    (1): Conv2d(64, 64, kernel_size=(1, 1), stride=(2, 2))\n",
+      "    (1): Conv2d(64, 64, kernel_size=(2, 2), stride=(2, 2))\n",
       "    (2): UNET_block(\n",
       "      (convblock): Sequential(\n",
       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -194,29 +193,28 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
-      "    (3): Conv2d(128, 128, kernel_size=(1, 1), stride=(2, 2))\n",
+      "    (3): Conv2d(128, 128, kernel_size=(2, 2), stride=(2, 2))\n",
       "    (4): UNET_block(\n",
       "      (convblock): Sequential(\n",
       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -224,29 +222,28 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
-      "    (5): Conv2d(256, 256, kernel_size=(1, 1), stride=(2, 2))\n",
+      "    (5): Conv2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
       "    (6): UNET_block(\n",
       "      (convblock): Sequential(\n",
       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -254,22 +251,21 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(128, 1568, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(512, 512, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
-      "    (7): Conv2d(512, 512, kernel_size=(1, 1), stride=(2, 2))\n",
+      "    (7): Conv2d(512, 512, kernel_size=(2, 2), stride=(2, 2))\n",
       "  )\n",
       "  (ups): ModuleList(\n",
       "    (0): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2))\n",
@@ -279,7 +275,7 @@
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -287,19 +283,18 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(128, 1568, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(512, 512, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(1024, 512, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
       "    (2): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
@@ -309,7 +304,7 @@
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(256, 64, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -317,19 +312,18 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(64, 784, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(512, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
       "    (4): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
@@ -339,7 +333,7 @@
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -347,19 +341,18 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(32, 392, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(256, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
       "    (6): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
@@ -369,7 +362,7 @@
       "        (1): GELU(approximate='none')\n",
       "      )\n",
       "      (involution): Sequential(\n",
-      "        (0): Involution(\n",
+      "        (0): Involution_CUDA(\n",
       "          (conv1): ConvModule(\n",
       "            (batch_norm): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "            (conv2d): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -377,19 +370,18 @@
       "          (conv2): ConvModule(\n",
       "            (conv2d): Conv2d(16, 196, kernel_size=(1, 1), stride=(1, 1))\n",
       "          )\n",
-      "          (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "        )\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "        (2): GELU(approximate='none')\n",
       "      )\n",
       "      (convblock2): Sequential(\n",
       "        (0): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "      (gelu): GELU(approximate='none')\n",
       "      (mapping): Sequential(\n",
       "        (0): Conv2d(128, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (1): LayerNorm()\n",
       "      )\n",
       "    )\n",
       "  )\n",
@@ -400,7 +392,7 @@
       "      (1): GELU(approximate='none')\n",
       "    )\n",
       "    (involution): Sequential(\n",
-      "      (0): Involution(\n",
+      "      (0): Involution_CUDA(\n",
       "        (conv1): ConvModule(\n",
       "          (batch_norm): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "          (conv2d): Conv2d(1024, 256, kernel_size=(1, 1), stride=(1, 1))\n",
@@ -408,19 +400,18 @@
       "        (conv2): ConvModule(\n",
       "          (conv2d): Conv2d(256, 3136, kernel_size=(1, 1), stride=(1, 1))\n",
       "        )\n",
-      "        (unfold): Unfold(kernel_size=7, dilation=1, padding=3, stride=1)\n",
       "      )\n",
-      "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (1): LayerNorm()\n",
       "      (2): GELU(approximate='none')\n",
       "    )\n",
       "    (convblock2): Sequential(\n",
       "      (0): Conv2d(1024, 1024, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-      "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (1): LayerNorm()\n",
       "    )\n",
       "    (gelu): GELU(approximate='none')\n",
       "    (mapping): Sequential(\n",
       "      (0): Conv2d(512, 1024, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (1): LayerNorm()\n",
       "    )\n",
       "  )\n",
       ")\n"
@@ -429,7 +420,7 @@
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = UNET(in_channels = 3, out_channels = 3, use_cuda = False).to(device)\n",
+    "model = UNET(in_channels = 3, out_channels = 3, use_cuda = True).to(device)\n",
     "\n",
     "epochs = 100\n",
     "lr = 1e-4\n",
@@ -451,8 +442,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flops of the model 19.42 GMac\n",
-      "Number of parameters 9.47 M\n"
+      "Flops of the model 20.13 GMac\n",
+      "Number of parameters 10.51 M\n"
      ]
     }
    ],
@@ -473,11 +464,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_dir = \"logs/thay_long\"\n",
+    "log_dir = \"logs/finally\"\n",
     "os.makedirs(log_dir, exist_ok=True)\n",
     "timestamp = datetime.datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "log_file = os.path.join(log_dir, f\"training_UNET_classic_{timestamp}.log\")\n",
-    "val_logfile = os.path.join(log_dir, f\"val_UNET_classic_{timestamp}.log\")\n",
+    "log_file = os.path.join(log_dir, f\"training_Inv_{timestamp}.log\")\n",
+    "val_logfile = os.path.join(log_dir, f\"val_Inv_{timestamp}.log\")\n",
     "\n",
     "def setup_logger(logger_name, log_file, level=logging.INFO):\n",
     "    \"\"\"Function to setup logger\"\"\"\n",
@@ -507,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36f250fa381647d5b5114feeb78892e0",
+       "model_id": "3b737431f2a74eb6beb52e8ffd773f1c",
        "version_major": 2,
        "version_minor": 0
       },
